--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             padding: 12px 24px;
             font-size: 22px;
             cursor: pointer;
+            margin: 8px;
         }
     </style>
 </head>
@@ -47,10 +48,12 @@
     <div id="menu">
         <h1>TRON</h1>
         <button id="startBtn">Почати гру</button>
+        <button id="duelBtn">1 на 1 NEON</button>
     </div>
 
     <div id="ui" style="display:none">
         <div>← / A — вліво, → / D — вправо</div>
+        <div>W — вперед другого гравця, A — вліво, D — вправо</div>
         <div>R — перезапуск</div>
         <div id="status"></div>
     </div>
