--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 <body>
     <div id="menu">
         <h1>TRON</h1>
-        <button id="startBtn">Почати гру</button>
+        <button id="startBtn">Гра з ботами</button>
         <button id="duelBtn">1 на 1 NEON</button>
     </div>
 
     <div id="ui" style="display:none">
-        <div>← / A — вліво, → / D — вправо</div>
-        <div>W — вперед другого гравця, A — вліво, D — вправо</div>
+        <div>← / → — гравець 1</div>
+        <div>A / D — гравець 2</div>
         <div>R — перезапуск</div>
         <div id="status"></div>
     </div>
