--- a/index.html
+++ b/index.html
@@ -9,19 +9,11 @@
             padding: 0;
             background: #000;
             color: #fff;
-            font-family: sans-serif;
+            font-family: "Segoe UI", sans-serif;
             overflow: hidden;
         }
-        #ui {
-            position: absolute;
-            left: 10px;
-            top: 10px;
-            z-index: 10;
-        }
-        canvas {
-            display: block;
-            background: #050505;
-        }
+
+
         #menu {
             position: absolute;
             inset: 0;
@@ -29,26 +21,84 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: rgba(0,0,0,0.85);
+            background: radial-gradient(circle at center, #07121f 0%, #000 70%);
+            box-shadow: inset 0 0 60px #001f33;
             z-index: 20;
         }
-        #menu h1 {
-            font-size: 48px;
-            margin-bottom: 20px;
+
+        #menu .panel {
+            padding: 40px 60px;
+            border: 3px solid #0ff;
+            border-radius: 18px;
+            box-shadow: 0 0 25px #0ff, inset 0 0 20px #0099cc;
+            background: rgba(0, 20, 30, 0.4);
+            text-align: center;
+            backdrop-filter: blur(6px);
         }
+
+        #menu h1 {
+            font-size: 64px;
+            margin: 0 0 10px 0;
+            text-shadow: 0 0 20px #0ff, 0 0 40px #00ccff;
+            letter-spacing: 3px;
+        }
+
+        #menu h2 {
+            margin-top: 0;
+            margin-bottom: 25px;
+            font-size: 22px;
+            color: #66e6ff;
+            text-shadow: 0 0 12px #0ff;
+        }
+
         #menu button {
-            padding: 12px 24px;
+            width: 260px;
+            padding: 14px 24px;
             font-size: 22px;
             cursor: pointer;
-            margin: 8px;
+            margin: 10px 0;
+            border-radius: 12px;
+            border: 2px solid #0ff;
+            background: rgba(0, 40, 60, 0.6);
+            color: #aef7ff;
+            letter-spacing: 1px;
+            text-shadow: 0 0 10px #0ff;
+            box-shadow: 0 0 20px #00aaff;
+            transition: 0.18s ease;
+        }
+
+        #menu button:hover {
+            background: rgba(0, 120, 200, 0.8);
+            color: #fff;
+            transform: translateY(-3px);
+            box-shadow: 0 0 25px #00cfff, 0 0 45px #00aaff;
+        }
+
+
+        #ui {
+            position: absolute;
+            left: 10px;
+            top: 10px;
+            z-index: 10;
+        }
+
+        canvas {
+            display: block;
+            background: #050505;
         }
     </style>
 </head>
+
 <body>
+
     <div id="menu">
-        <h1>TRON</h1>
-        <button id="startBtn">Гра з ботами</button>
-        <button id="duelBtn">1 на 1 NEON</button>
+        <div class="panel">
+            <h1>TRON</h1>
+            <h2>Оберіть режим гри</h2>
+
+            <button id="startBtn">Гра з ботами</button>
+            <button id="duelBtn">1 на 1 NEON</button>
+        </div>
     </div>
 
     <div id="ui" style="display:none">
